# ImGuiCrossPlatform

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Include/: ImGuiCrossPlatformLinux.h  ImGuiCrossPlatformRaylib.h  ImGuiCrossPlatformWin32.h  UiManager.h
Include/UI/: UiManager.h
Include/UI/graphic_backend/: BackendFlags.h  ImGuiCrossPlatformLinux.h  ImGuiCrossPlatformWin32.h  Platform.h
Include/graphic_backend/: ImGuiCrossPlatformGLFW.h  ImGuiCrossPlatformLinux.h  ImGuiCrossPlatformRaylib.h  ImGuiCrossPlatformWin32.h  Platform.h
Src/Application/: Application.hpp
Src/DemoApplication/: DemoApplication.cpp  DemoApplication.hpp
Src/ImGui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
Src/ImGuiCrossPlatform/: ImGuiCrossPlatform.cpp  ImGuiCrossPlatform.hpp  ImGuiCrossPlatformLinux.cpp  ImGuiCrossPlatformLinux.hpp  ImGuiCrossPlatformWin32.cpp  ImGuiCrossPlatformWin32.hpp
Src/ImGuiCrossPlatformImpl/: ImGuiCrossPlatformLinux.cpp  ImGuiCrossPlatformLinux.hpp  ImGuiCrossPlatformWin32.cpp  ImGuiCrossPlatformWin32.hpp
Src/Image/: Image.cpp  Image.hpp
Src/Main/: ImGuiCrossPlatform.cpp  ImGuiCrossPlatform.hpp  main.cpp
Src/UI/: UiManager.cpp
cmake/: imgui.cmake  raylib.cmake  rlimgui.cmake
